--- a/encuesta.html
+++ b/encuesta.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
+<html lang="es"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Encuesta de Jardinería - VerdeRaíz</title>
@@ -58,7 +57,7 @@
       background-color: #1b5e20;
     }
   </style>
-</head>
+<style>:is([id*='google_ads_iframe'],[id*='taboola-'],.taboolaHeight,.taboola-placeholder,#top-ad,#credential_picker_container,#credentials-picker-container,#credential_picker_iframe,[id*='google-one-tap-iframe'],#google-one-tap-popup-container,.google-one-tap__module,.google-one-tap-modal-div,#amp_floatingAdDiv,#ez-content-blocker-container) {display:none!important;min-height:0!important;height:0!important;}</style></head>
 <body>
 
 <div class="container" id="caratula">
@@ -132,5 +131,5 @@
   }
 </script>
 
-</body>
-</html>
+
+</body></html>
